# aura

./: ._aura_evaluator_patches_bundle  .dockerignore  .gitignore  .pre-commit-config.yaml  002-run_single_expose_stub.patch  004-test_fragment_boundary.patch  Dockerfile  Dockerfile.ci-smoke  LICENSE  Makefile  Makefile.bak  README.md  THIRD_PARTY_NOTICES.md  apply_ci_fix.sh  aura_logging.py  aura_smoke.diff  cleanup.sh  docker-compose.yml  dummy-change-to-trigger-ci.txt  fix_mypy.sh  fix_typings.py  hoot-apply-run.sh  hoot-diagnose.sh  mypy.ini  onboarding.sh  requirements-dev.txt  requirements.txt  run_diagnostics.sh  run_local_smoke.sh  run_stress_tests.sh  start_aura.sh  stop_aura.sh  stress_test_suite.yaml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
aura_tools/: package.xml  setup.cfg  setup.py
aura_tools/aura_tools/: param_bridge.py
config/: golden_params.yaml
evaluation/: mot_evaluator.py  run_trackeval.py
evaluators/: base.py
patches/: 001-mot_evaluator.patch  003-run_single_adapter.patch  005-test_yaml_fps_extraction.patch  006-test_jsonl_and_empty_cases.patch
scenarios/: crossing_targets.yaml  params.min.yaml  rf_clutter.yaml  stress_test_suite.yaml
scripts/: docker_smoke.sh  test_all.sh
security/: generate_keystore.sh  permissions.xml
smoke_artifacts_latest/: metrics.json
tests/: test_runner.py  test_teleop.py
tools/: aura_align_check.sh  convert_kitti_to_jsonl.py  convert_mot_to_jsonl.py  create_sample_mot_jsonl.py  derive_bounds.py  experiments.sample.json  freeze_golden.py  make_challenge_bag.sh  make_gt_from_yaml.py  (+8 more)
(+49 files in other folders)
