<?xml version="1.0"?>
<package format="3">
  <name>aura_tools</name>
  <version>0.1.0</version>
  <description>Utility nodes for AURA experiments (param bridge for live tuning).</description>
  <maintainer email="devnull@example.com">AURA Dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
